--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="200dp"
+    android:layout_height="220dp"
     android:layout_margin="1dp">
 
     <ImageView
@@ -27,12 +27,12 @@
 
     <TextView
         android:id="@+id/genre"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/imageView"
+        android:layout_width="103dp"
+        android:layout_height="54dp"
+        android:layout_alignBottom="@id/title"
         android:layout_marginLeft="2dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="-40dp"
+        android:layout_marginBottom="-55dp"
         android:text="Genre" />
 
     <TextView
