--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,13 +101,15 @@
         android:id="@+id/web_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="168dp"
+        android:layout_marginBottom="36dp"
         android:text="KinoPoisk"
+        android:backgroundTint="@color/black"
+        android:textColor="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/myrecyclerview"
         app:layout_constraintStart_toStartOf="@id/myrecyclerview"
         app:layout_constraintTop_toBottomOf="@+id/myrecyclerview"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.961" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
