--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <TextView
-        android:id="@+id/ratingView"
+        android:id="@+id/detailRatingView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
