--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -36,17 +36,18 @@
         android:text="Genre" />
 
     <TextView
-        android:id="@+id/rating"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-20dp"
+        android:id="@+id/ratingViewField"
+        android:layout_width="33dp"
+        android:layout_height="21dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-22dp"
+        android:layout_marginTop="9dp"
         android:layout_toEndOf="@id/imageView"
-        android:background="@color/black"
         android:fontFamily="sans-serif-light"
+        android:gravity="center"
         android:text="Rating"
-        android:foreground="@drawable/rounded"
-        android:textAlignment="center"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
